added historical patent appli

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -352,6 +352,54 @@ Terahertz spectroscopy of ferroelectrics and related materials
 % ---- other ----/*{{{*/
 % /*}}}*/
 
+% == Patents ==
+@misc{wickersham1960artificial,
+  title={Artificial dielectric polarizer},
+  author={Wickersham Jr Arthur F},
+  url={http://www.google.com/patents/US2921312},
+  year={1960},
+  month=jan # "~12",
+  publisher={Google Patents},
+  note={US Patent 2,921,312}
+}
+@misc{hannan1966artificial,
+  title={Artificial dielectric using interspersed rods},
+  author={Hannan Peter W},
+  url={http://www.google.com.py/patents/US3254345},
+  year={1966},
+  month=may # "~31",
+  publisher={Google Patents},
+  note={US Patent 3,254,345}
+}
+@misc{anderson1967artificial,
+  title={Artificial dielectric lens structure},
+  author={Anderson, Donald L},
+  url={http://google.ru/patents/US3329958},
+  year={1967},
+  month=jul # "~4",
+  publisher={Google Patents},
+  note={US Patent 3,329,958}
+}
+@misc{ho1994periodic,
+  title={Periodic dielectric structure for production of photonic band gap and devices incorporating the same},
+  author={Ho, K.M. and Chan, C.T. and Soukoulis, C.},
+  url={https://www.google.com.ar/patents/US5335240},
+  year={1994},
+  month=aug # "~2",
+  publisher={Google Patents},
+  note={US Patent 5,335,240}
+}
+@misc{sweatt2005method,
+  title={Method for the fabrication of three-dimensional microstructures by deep X-ray lithography},
+  author={Sweatt, W.C. and Christenson, T.R.},
+  url={https://www.google.com.ar/patents/US6875544},
+  year={2005},
+  month=apr # "~5",
+  publisher={Google Patents},
+  note={US Patent 6,875,544}
+}
+
+
 % == Sources metamaterial theory ==
 %  -- books --/*{{{*/
 @book{jackson1962book,
